# spam-detector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
experiments/: ruff.toml  train.py  training.py
spam_detector/: __init__.py  config.py  log_config.py
spam_detector/core/: base_model.py
spam_detector/fastspam/: ft_model.py
spam_detector/linear/: sk_model.py
spam_detector/rag/: rag_model.py
spam_detector/src/: __init__.py  config.py  log_config.py
spam_detector/src/core/: base_model.py  datasets.py
spam_detector/src/fastspam/: ft_model.py
spam_detector/src/linear/: sk_model.py
spam_detector/src/rag/: rag_model.py
spam_detector/src/transformers/: bert_model.py
spam_detector/src/vectordb/: __init__.py  vectordb_rag_model.py
spam_detector/transformers/: bert_model.py
spam_detector/vectordb/: vectordb_rag_model.py
tests/: ruff.toml  test_bert_model.py  test_factory.py  test_fasttext_model.py  test_linear_model.py  test_train.py  test_vectordb_rag_model.py
