[project]
name = "spam-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pandas[parquet,fss]>=2.3.3",
    "huggingface-hub>=0.36.0",
]
license = { file = "LICENSE" }


[dependency-groups]
dev = [
    "marimo[recommended]>=0.15.5",
    "notebook>=7.3.2",
    "ruff>=0.13.0",
    "pytest>=8.0.0",
]
# raw = [
#     "fasttext",
# ]
fasttext = [
    "fasttext-wheel>=0.9.2",
    "numpy<2.0",
]
sklearn = [
    "joblib>=1.5.2",
    "scikit-learn>=1.7.2",
]
transformers = [
    "sentence-transformers>=5.1.2",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
chromadb = [
    "sentence-transformers>=5.1.2",
    "chromadb>=1.3.5",
]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "RUF001",
    "RUF002",
    "BLE001",
    "ANN001",
    "ERA001",
    "ERA",
    "D",
    "G",
    "PTH",
    "TRY301",
    "RUF003",
    "UP007",
    "N802",
    "T201",
    "FBT002"
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.uv.sources]
fasttext = { git = "https://github.com/facebookresearch/fastText" }

[tool.marimo.runtime]
pythonpath = ["."]
format_on_save = true

[tool.marimo.save]
autosave_delay = 1000
autosave = "after_delay"
format_on_save = true
